--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
